Code refactoring, unit test added